@@ -51,6 +51,7 @@ The following mappers are fully supported:
 - MBC5+Rumble
 - MBC7
 - Wisdom Tree (unlicensed)
+- Pokémon Jade/Diamond (unlicensed)
 
 The following mappers are partially supported:
 
