@@ -359,6 +359,11 @@
            <string>Wisdom Tree (Unlicensed)</string>
           </property>
          </item>
+         <item>
+          <property name="text">
+           <string>Pokémon Jade/Diamond (Unlicensed)</string>
+          </property>
+         </item>
         </widget>
        </item>
        <item row="2" column="0">
